[project]
name = "Tensorflow data augmentation"
version = ""
description = ""
authors = [
    {name = "Nasy", email = "nasyxx+smile@gmail.com"},
]
dependencies = []
requires-python = ""
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/uta-smile/tensorflow-data-augmentation"

[tool]
[tool.pdm]


[tool.black]
line-length = 79


[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"